--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -20,6 +20,7 @@ jobs:
         uses: github/super-linter@v4
         env:
           VALIDATE_JSCPD: false
-          VALIDATE_ALL_CODEBASE: true
+          VALIDATE_PYTHON: ture
+          VALIDATE_ALL_CODEBASE: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
