--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,8 +1,9 @@
-FROM python:rc-slim
+FROM python:alpine
 
 # For pete's sake do not put this on the internet
+RUN apk add --update linux-headers
+RUN addgroup -S credev && adduser -S credev -G credev
 
-RUN useradd -ms /bin/bash  credev
 
 COPY . /home/credev/cre_sync
 RUN chown -R credev:credev /home/credev/cre_sync
