--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,12 +1,13 @@
 FROM python:alpine
 
 # For pete's sake do not put this on the internet
-RUN apk add --update linux-headers
+
+RUN apk add  --no-cache --update --upgrade linux-headers py3-numpy &&\
+ apk add --no-cache --virtual .build-deps gcc g++ zlib-dev make python3-dev py3-numpy-dev jpeg-dev
+
 RUN addgroup -S credev && adduser -S credev -G credev
 
-
-COPY . /home/credev/cre_sync
-RUN chown -R credev:credev /home/credev/cre_sync
+COPY --chown=credev:credev . /home/credev/cre_sync
 USER credev
 
 WORKDIR /home/credev/cre_sync
