--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -22,7 +22,6 @@ jobs:
 
           VALIDATE_PYTHON_BLACK: true
           VALIDATE_ALL_CODEBASE: false
-          VALIDATE_PYTHON_MYPY: true
-          PYTHON_MYPY_CONFIG_FILE: .mypy.ini
+          VALIDATE_PYTHON_MYPY: false
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
