--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ Deprecated==1.2.10
 flake8==3.9.2
 Flask==1.1.2
 Flask-Cache==0.13.1
+Flask-Caching==1.10.1
 Flask-Cors==3.0.10
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==2.5.1
@@ -50,6 +51,7 @@ networkx==2.5.1
 oauthlib==3.1.0
 pep517==0.8.2
 pip-autoremove==0.9.1
+pkg_resources==0.0.0
 platformdirs==2.2.0
 prompt-toolkit==3.0.19
 psycopg2==2.9.1
@@ -73,6 +75,7 @@ smmap==3.0.4
 SQLAlchemy==1.3.23
 sqlalchemy-stubs==0.4
 toml==0.10.2
+typed-ast==1.4.3
 types-PyYAML==5.4.8
 typing-extensions==3.10.0.0
 urllib3==1.25.10
