--- a/application/tests/data/osib_example.yml
+++ b/application/tests/data/osib_example.yml
@@ -4,14 +4,14 @@ schema:         v0.90
 date:           2021/11/04
 children:
   "OWASP":
-    alias: "Open Web Application Security Project"
+    aliases: ["Open Web Application Security Project", "owasp"]
     attributes:
       sources_i18n:
         en:
           name:             "Open Web Application Security Project&reg; (OWASP)"
     children:
       "ASVS":
-        alias: "Application Security Verification Standard"
+        aliases: ["Application Security Verification Standard", "Standard_ASVS"]
         attributes:
           sources_i18n:
             en:
