--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,5 @@ jobs:
       - name: Install python dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && pip install -r requirements.txt
       - name: Test
-        run: FLASK_APP=cre.py FLASK_CONFIG=test flask test --coverage
+        run: make test
 
