--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,8 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && pip install -r requirements.txt
       - name: Test
         run: make test
-        
+        env:
+          FLASK_APP: cre.py
+          FLASK_CONFIG: testing 
+
 
