--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,5 +11,4 @@ jobs:
       - name: Install python dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && pip install -r requirements.txt
       - name: Test
-        run: make test
-
+        run: FLASK_APP=$(pwd)/cre.py FLASK_CONFIG=testing flask test
