--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
       - name: Install python dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && pip install -r requirements.txt
       - name: Test
-        run: export FLASK_APP=$(pwd)/cre.py export FLASK_CONFIG=testing flask test
+        run: export FLASK_APP=$(pwd)/cre.py export FLASK_CONFIG=testing make test
