--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v2
-
       - name: Install python dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && make install-deps
       - name: Test
         run: make test
+    name: Test-E2e
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Install python dependencies
+        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && make install-deps
+      - name: Test
+        run: make e2e
