--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install python dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && make install-deps
+        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip && make install-deps chromium libgbm1
       - name: Test-e2e
-        run: make e2e
+        run: yarn install && make e2e
