--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -8,6 +8,6 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v2
       - name: Install python dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium libgbm1 && make install-deps 
+        run: sudo apt-get update && apt search chromium-browser && sudo apt-get install -y python3-setuptools python3-pip chromium libgbm1 && make install-deps 
       - name: Test-e2e
         run: make e2e
