--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "d3-dag": "^0.6.3",
     "date-fns": "^2.16.1",
     "del-cli": "^3.0.1",
+    "elkjs": "^0.7.1",
     "enzyme": "3.11.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "file-loader": "^6.2.0",
@@ -76,6 +77,7 @@
     "semantic-ui-react": "^2.0.3",
     "sinon": "^10.0.0",
     "typescript": "4.2.4",
+    "web-worker": "^1.2.0",
     "webpack-cli": "^4.4.0"
   },
   "importSort": {
