--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,12 +24,13 @@ jobs:
       - name: Deploy backend to heroku
         run:
          highest_tag="$(git tag -l --sort=-v:refname | grep ^v | sed 1q)"
-
+         commit_sha=$(git rev-parse origin/main)
          major=$(echo "${highest_tag}" | cut -f1 -d. | tr -dc '0-9')
          minor=$(echo "${highest_tag}" | cut -f2 -d. | tr -dc '0-9')
          patch=$(echo "${highest_tag}" | cut -f3 -d. | tr -dc '0-9')
          patch=$((patch+1))
          new_tag="v${major}.${minor}.${patch}"
+
          git add .
          git commit -m "${new_tag}"
          git tag --annotate "${new_tag}" --message "${new_tag}" "${commit_sha}"
