--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,6 @@ jobs:
          new_tag="v${major}.${minor}.${patch}"
 
          git add .
-         git commit -m "${new_tag}"
+         git commit -m "${new_tag} -- ${commit_sha}"
          git tag --annotate "${new_tag}" --message "${new_tag}" "${commit_sha}"
          git push --force heroku master
