--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Brotli==1.0.9
 cachetools==4.1.1
 certifi==2020.6.20
 chardet==3.0.4
+charset-normalizer==2.0.12
 click==7.1.2
 click-didyoumean==0.0.3
 click-plugins==1.1.1
