--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ argcomplete==2.0.0
 astroid==2.7.2
 attrs==19.3.0
 bcrypt==4.0.1
-black==23.1.0
+black==21.11b1
 Brotli==1.0.9
 cachetools==4.1.1
 certifi==2020.6.20
@@ -27,6 +27,7 @@ decorator==4.4.2
 defusedxml==0.7.1
 Deprecated==1.2.10
 dnspython==2.3.0
+docutils==0.19
 email-validator==1.3.1
 et-xmlfile==1.1.0
 Flask==2.2.2
@@ -75,6 +76,7 @@ more-itertools==7.0.0
 mypy==0.910
 mypy-extensions==0.4.3
 networkx==2.5.1
+nose==1.3.7
 numpy==1.23.0
 oauthlib==3.1.0
 openapi-schema-validator==0.3.4
@@ -82,7 +84,7 @@ openapi-spec-validator==0.5.1
 openpyxl==3.1.0
 orderedmultidict==1.0.1
 orjson==3.8.5
-packaging==23.0
+packaging==21.3
 paramiko==3.0.0
 pathable==0.4.3
 pathspec==0.9.0
