--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ google-cloud-aiplatform
 grpcio_status
 grpcio
 gspread==5.10.0
-networkx==3.1
+networkx
 nltk==3.8.1
 oauthlib==3.2.2
 openai==0.27.9
