--- a/requirements.txt
+++ b/requirements.txt
@@ -1,33 +1,98 @@
-compliance-trestle
-coverage
-dacite
-docx==0.2.4
-Flask_Caching==2.0.2
-flask_compress==1.13
-Flask_Cors==4.0.0
-Flask_Migrate==4.0.4
-Flask-SQLAlchemy==3.0.5
-gitpython
-google-api-core
-google_auth_oauthlib
-google-cloud-aiplatform
-grpcio_status
-grpcio
-gspread==5.10.0
-gunicorn
-networkx
-nltk==3.8.1
+attrs==22.2.0
+Babel==2.10.3
+bcrypt==3.2.2
+beautifulsoup4==4.11.2
+blinker==1.5
+Brlapi==0.8.4
+certifi==2022.9.24
+chardet==5.1.0
+click==8.1.3
+cloud-init==23.2.2
+colorama==0.4.6
+command-not-found==0.3
+configobj==5.0.8
+cryptography==38.0.4
+cssselect==1.2.0
+cups-of-caffeine==2.9.12
+cupshelpers==1.0
+dbus-python==1.3.2
+defer==1.0.6
+distlib==0.3.6
+distro==1.8.0
+distro-info==1.5
+duplicity==0.8.22
+ewmh==0.1.6
+fasteners==0.17.3
+filelock==3.9.0
+future==0.18.2
+html5lib==1.1
+httplib2==0.20.4
+idna==3.3
+importlib-metadata==4.12.0
+jaraco.classes==3.2.1
+jeepney==0.8.0
+Jinja2==3.1.2
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.6.0
+keyring==23.9.3
+language-selector==0.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.5
+lazr.uri==1.0.6
+lockfile==0.12.2
+louis==3.24.0
+lxml==4.9.2
+Mako==1.2.4.dev0
+markdown-it-py==2.1.0
+MarkupSafe==2.1.2
+mdurl==0.1.2
+monotonic==1.6
+more-itertools==8.10.0
+netifaces==0.11.0
+numpy==1.24.2
 oauthlib==3.2.2
-openai==0.27.9
-playwright
-psycopg2-binary
-pygithub
-python_markdown_maker==1.0
-scikit_learn==1.3.0
-scipy==1.11.2
-semver
-setuptools==66.1.1
-simplify_docx==0.1.2
-SQLAlchemy==2.0.20
-vertexai==0.0.1
-xmltodict==0.13.0
+olefile==0.46
+paramiko==2.12.0
+pexpect==4.8.0
+Pillow==9.4.0
+platformdirs==3.0.0
+psutil==5.9.4
+ptyprocess==0.7.0
+pycairo==1.20.1
+pycups==2.0.1
+Pygments==2.14.0
+PyGObject==3.44.1
+PyJWT==2.6.0
+PyNaCl==1.5.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
+pyserial==3.5
+python-apt==2.5.3+ubuntu1
+python-dateutil==2.8.2
+python-debian==0.1.49+ubuntu2
+python-xlib==0.33
+pytz==2022.7.1
+pyxdg==0.28
+PyYAML==6.0
+reportlab==3.6.12
+requests==2.28.1
+rich==13.3.1
+scour==0.38.2
+SecretStorage==3.3.3
+six==1.16.0
+soupsieve==2.4
+systemd-python==235
+terminator==2.1.3
+ubuntu-advantage-tools==8001
+ubuntu-drivers-common==0.0.0
+ufw==0.36.1
+unattended-upgrades==0.1
+urllib3==1.26.12
+usb-creator==0.3.16
+virtualenv==20.19.0+ds
+wadllib==1.3.6
+webencodings==0.5.1
+xdg==5
+xkit==0.0.0
+zipp==1.0.0
