--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Babel==2.10.3
 bcrypt==3.2.2
 beautifulsoup4==4.11.2
 blinker==1.5
-Brlapi==0.8.4
+Brlapi
 certifi==2022.9.24
 chardet==5.1.0
 click==8.1.3
