--- a/requirements.txt
+++ b/requirements.txt
@@ -23,7 +23,7 @@ playwright
 psycopg2-binary
 pygithub
 python_markdown_maker==1.0
-scikit_learn==1.3.0
+scikit_learn
 scipy==1.11.2
 semver
 setuptools==66.1.1
