--- a/requirements.txt
+++ b/requirements.txt
@@ -28,7 +28,7 @@ scipy==1.11.2
 semver
 setuptools==66.1.1
 simplify_docx==0.1.2
-SQLAlchemy==2.0.20
+SQLAlchemy
 compliance-trestle
 nose==1.3.7
 numpy==1.23.0
