--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ compliance-trestle
 coverage
 dacite
 docx==0.2.4
+Flask==2.3.2
 Flask_Caching==2.0.2
 flask_compress==1.13
 Flask_Cors==4.0.0
@@ -26,13 +27,13 @@ python_markdown_maker==1.0
 scikit_learn
 scipy==1.11.2
 semver
-setuptools==66.1.1
+setuptools==68.2.2
 simplify_docx==0.1.2
 SQLAlchemy
 compliance-trestle
 nose==1.3.7
 numpy==1.23.0
-neo4j==5.11.0
+neo4j
 openapi-schema-validator==0.3.4
 openapi-spec-validator==0.5.1
 openpyxl==3.1.0
