--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,6 +11,9 @@ jobs:
         with:
           python-version: '3.11.4' 
           cache: 'pip'
+      - uses: actions/setup-node@v3
+        with:
+          cache: 'yarn'
       - name: Install python dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium-browser libgbm1 && make install-deps 
       - name: Test-e2e
