--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -18,11 +18,4 @@ jobs:
       - name: Install python dependencies
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium-browser libgbm1 && make install-deps 
       - name: Run App in background
-        run: |
-          yarn build
-          [ -d "./venv" ] && . ./venv/bin/activate
-          export FLASK_APP=./cre.py
-          export FLASK_CONFIG=development
-          FLASK_CONFIG=development flask run& 
-      - name: Test-e2e
-        run: yarn test:e2e
+        run: make e2e
