--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ compliance-trestle
 nose==1.3.7
 numpy==1.23.0
 neo4j
+neomodel
 openapi-schema-validator==0.3.4
 openapi-spec-validator==0.5.1
 openpyxl==3.1.0
