--- a/requirements.txt
+++ b/requirements.txt
@@ -89,7 +89,7 @@ ruamel.yaml.clib==0.2.7
 scikit-learn==1.2.2
 Shapely==1.8.5.post1
 simplify-docx==0.1.2
-six==1.15.0
+six
 smmap==3.0.4
 sniffio==1.3.0
 soupsieve==2.4.1
