--- a/requirements.txt
+++ b/requirements.txt
@@ -85,6 +85,8 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rsa==4.7
+rq==1.15.1
+redis==5.0.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 scikit-learn==1.2.2
