--- a/requirements.txt
+++ b/requirements.txt
@@ -32,6 +32,7 @@ simplify_docx==0.1.2
 SQLAlchemy
 compliance-trestle
 nose==1.3.7
+mypy
 numpy==1.23.0
 neo4j
 neomodel==5.1.2
@@ -84,6 +85,8 @@ requests==2.27.1
 requests-oauthlib==1.3.1
 rfc3986==1.5.0
 rsa==4.7
+rq==1.15.1
+redis==5.0.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.7
 scikit-learn==1.2.2
