--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -24,5 +24,5 @@ jobs:
           export FLASK_APP=./cre.py
           export FLASK_CONFIG=development
           FLASK_CONFIG=development flask run& 
-      - name: Test-e2e
-        run: yarn test:e2e
+          yarn test:e2e
+          exit $?
