--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,7 +16,11 @@ jobs:
         with:
           cache: 'yarn'
       - name: Install python dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium-browser libgbm1 && make install-deps 
+        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium-browser libgbm1 && make install-deps
+      - name: DB setup
+        run: |
+            make migrate-upgrade
+            make import-all
       - name: Run App in background
         run: |
           yarn build
