--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,13 +19,14 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium-browser libgbm1 && make install-deps
       - name: DB setup
         run: |
+            cp cres/db.sqlite standards_cache.sqlite
             make migrate-upgrade
-      - name: Run App in background
+      - name: Run app and e2e tests
         run: |
           yarn build
           [ -d "./venv" ] && . ./venv/bin/activate
           export FLASK_APP=./cre.py
           export FLASK_CONFIG=development
-          FLASK_CONFIG=development flask run&
-      - name: Test-e2e
-        run: yarn test:e2e
+          FLASK_CONFIG=development flask run &
+          sleep 20s
+          yarn test:e2e
