--- a/requirements.txt
+++ b/requirements.txt
@@ -36,7 +36,7 @@ nose==1.3.7
 mypy
 numpy==1.23.0
 neo4j
-neomodel==5.1.2
+neomodel
 openapi-schema-validator==0.3.4
 openapi-spec-validator==0.5.1
 openpyxl==3.1.0
