--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -16,7 +16,10 @@ jobs:
         with:
           cache: 'yarn'
       - name: Install python dependencies
-        run: sudo apt-get update && sudo apt-get install -y python3-setuptools python3-pip chromium-browser libgbm1 && make install
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y python3-setuptools python3-pip puthon3-virtualenv chromium-browser libgbm1
+          make install
       - name: DB setup
         run: |
             cp cres/db.sqlite standards_cache.sqlite
