switch port to 5k2 as most docker registries and apple airplay run on 5k

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Run app and e2e tests
         run: |
           yarn build
-          make dev-flask
+          make dev-flask&
           sleep 20s
           yarn test:e2e
