--- a/requirements.txt
+++ b/requirements.txt
@@ -1,286 +1,113 @@
-about-time==4.2.1
-alembic==1.13.2
-alive-progress==3.1.5
-annotated-types==0.7.0
-anyio==4.4.0
-argcomplete==3.1.4
-attrs==23.2.0
-Babel==2.10.3
-backoff==2.2.1
-bcrypt==3.2.2
-beautifulsoup4==4.12.3
-black==24.4.2
-blinker==1.7.0
-blis==0.7.11
-Brlapi==0.8.5
-Brotli==1.1.0
-cachelib==0.9.0
-cachetools==5.3.3
-catalogue==2.0.10
-certifi==2023.11.17
-cffi==1.16.0
-chardet==5.2.0
-click==8.1.6
-cloud-init==24.4
-cloudpathlib==0.18.1
-cmarkgfm==2024.1.14
-colorama==0.4.6
-command-not-found==0.3
-compliance-trestle==3.2.0
-confection==0.1.5
-configobj==5.0.8
-coverage==7.5.4
-cryptography==42.0.4
-cssselect==1.2.0
-cupshelpers==1.0
-cymem==2.0.8
-dacite==1.8.1
-datamodel-code-generator==0.25.8
-dbus-python==1.3.2
-defer==1.0.6
-defusedxml==0.7.1
-Deprecated==1.2.14
-distlib==0.3.8
-distro==1.9.0
-distro-info==1.7+build1
-dnspython==2.6.1
-docstring_parser==0.16
-duplicity==2.1.4
-email_validator==2.2.0
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
-et-xmlfile==1.1.0
-evdev==1.7.0
-ewmh==0.1.6
-fasteners==0.18
-filelock==3.13.1
-Flask==3.0.3
-Flask-Caching==2.3.0
-Flask-Compress==1.15
-Flask-Cors==4.0.1
-Flask-Migrate==4.0.7
-Flask-SQLAlchemy==3.1.1
-freetype-py==2.4.0
-furl==2.1.3
-future==0.18.2
-genson==1.3.0
-gitdb==4.0.11
-GitPython==3.1.43
-google-api-core==2.19.1
-google-auth==2.31.0
-google-auth-oauthlib==1.2.0
-google-cloud-aiplatform==1.49.0
-google-cloud-bigquery==3.25.0
-google-cloud-core==2.4.1
-google-cloud-resource-manager==1.12.3
-google-cloud-storage==2.17.0
-google-cloud-trace==1.13.3
-google-crc32c==1.5.0
-google-resumable-media==2.7.1
-googleapis-common-protos==1.63.2
-grapheme==0.6.0
-greenlet==3.0.3
-grpc-google-iam-v1==0.13.1
-grpcio==1.64.1
-grpcio-status==1.62.2
-grpcio-tools==1.14.1
-gspread==6.1.2
-gunicorn==22.0.0
-h11==0.14.0
-html5lib==1.1
-httpcore==1.0.5
-httplib2==0.20.4
-httpx==0.27.0
-idna==3.6
-ilcli==0.3.2
-importlib_metadata==7.1.0
-importlib_resources==6.4.0
-inflect==5.6.2
-iniconfig==1.1.1
-isort==5.13.2
-itsdangerous==2.2.0
-jaraco.classes==3.2.1
-jeepney==0.8.0
-Jinja2==3.1.3
-joblib==1.4.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.22.0
-jsonschema-path==0.3.3
-jsonschema-specifications==2023.12.1
-keyring==24.3.1
-langcodes==3.4.0
-language-selector==0.1
-language_data==1.2.0
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-lazy-object-proxy==1.10.0
-lockfile==0.12.2
-louis==3.29.0
-lxml==5.2.1
-Mako==1.3.2.dev0
-marisa-trie==1.2.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mergedeep==1.3.4
-monotonic==1.6
-more-itertools==10.2.0
-murmurhash==1.0.10
-mypy==1.10.1
-mypy-extensions==1.0.0
-neo4j==5.19.0
-neomodel==5.3.2
-netifaces==0.11.0
-networkx==3.3
-nltk==3.8.1
-nose==1.3.7
-numpy==1.26.4
-oauthlib==3.2.2
-olefile==0.46
-openai==1.35.10
-openapi-schema-validator==0.6.2
-openapi-spec-validator==0.7.1
-openpyxl==3.1.5
-opentelemetry-api==1.25.0
-opentelemetry-exporter-gcp-trace==1.6.0
-opentelemetry-instrumentation==0.46b0
-opentelemetry-instrumentation-flask==0.46b0
-opentelemetry-instrumentation-requests==0.46b0
-opentelemetry-instrumentation-sqlalchemy==0.46b0
-opentelemetry-instrumentation-wsgi==0.46b0
-opentelemetry-propagator-gcp==1.6.0
-opentelemetry-resourcedetector-gcp==1.6.0a0
-opentelemetry-sdk==1.25.0
-opentelemetry-semantic-conventions==0.46b0
-opentelemetry-util-http==0.46b0
-orderedmultidict==1.0.1
-orjson==3.10.6
-packaging==24.0
-paramiko==3.4.0
-pathable==0.4.3
-pathspec==0.12.1
-pbr==6.0.0
-pep517==0.13.1
-pexpect==4.9.0
-pillow==10.2.0
-pip-autoremove==0.10.0
-pipenv==2023.12.1
-pipx==1.4.3
-platformdirs==4.2.0
-playwright==1.45.0
-pluggy==1.5.0
-posthog==3.13.0
-prance==23.6.21.0
-preshed==3.0.9
-prompt_toolkit==3.0.47
-proto-plus==1.24.0
-protobuf==4.25.3
-psutil==5.9.8
-psycopg2-binary==2.9.9
-ptyprocess==0.7.0
-pyasn1==0.6.0
-pyasn1_modules==0.4.0
-pycairo==1.25.1
-pycodestyle==2.12.0
-pycparser==2.22
-pycups==2.0.1
-pydantic==2.8.2
-pydantic_core==2.20.1
-pyee==11.1.0
-pyflakes==3.2.0
-PyGithub==2.3.0
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-PySnooper==1.2.0
-pytest==8.2.2
-pytest-base-url==2.1.0
-pytest-playwright==0.5.1
-python-apt==2.7.7+ubuntu3
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-python-dotenv==1.0.1
-python-frontmatter==1.1.0
-python-markdown-maker==1.0
-python-slugify==8.0.4
-python-xlib==0.33
-pytz==2024.1
-pyudev==0.24.0
-pyxdg==0.28
-PyYAML==6.0.1
-redis==5.0.7
-referencing==0.35.1
-regex==2022.10.31
-requests==2.31.0
-requests-oauthlib==2.0.0
-rfc3339-validator==0.1.4
-rfc3986==2.0.0
-rich==13.7.1
-rpds-py==0.18.1
-rq==1.16.2
-rsa==4.9
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.8
-scikit-learn==1.5.1
-scipy==1.14.0
-scour==0.38.2
-SecretStorage==3.3.3
-semver==3.0.2
-setuptools==70.2.0
-shapely==2.0.4
-shellingham==1.5.4
-six==1.16.0
-smart-open==7.0.4
-smmap==5.0.1
-sniffio==1.3.1
-soupsieve==2.5
-spacy==3.7.5
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.31
-sqlalchemy-stubs==0.4
-srsly==2.4.8
-systemd-python==235
-terminator==2.1.3
-testresources==2.0.1
-text-unidecode==1.3
-thinc==8.2.5
-threadpoolctl==3.5.0
-toml==0.10.2
-tomli==2.0.1
-tqdm==4.66.4
-typed_ast==1.5.5
-typer==0.12.4
-types-PyYAML==6.0.12.20240311
-typing-inspect==0.9.0
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufw==0.36.2
-unattended-upgrades==0.1
-untangle==1.2.1
-urllib3==2.0.7
-usb-creator==0.3.16
-userpath==1.9.1
-vertexai==1.49.0
-virtualenv==20.25.0+ds
-wadllib==1.3.6
-wasabi==1.1.3
-watchdog==3.0.0
-wcwidth==0.2.13
-weasel==0.4.1
-webencodings==0.5.1
-Werkzeug==3.0.3
-wheel==0.42.0
-wrapt==1.16.0
-xdg==5
-xkit==0.0.0
-xmltodict==0.13.0
-yamllint==1.33.0
-zipp==1.0.0
-zstandard==0.22.0
+alive-progress
+babel
+beautifulsoup4
+brlapi
+cloud-init
+colorama
+command-not-found
+compliance-trestle
+configobj
+coverage
+cssselect
+cupshelpers
+dacite
+dbus-python
+defer
+distro-info
+duplicity
+email-validator
+en-core-web-sm
+evdev
+ewmh
+fasteners
+flask-caching
+flask-compress
+flask-cors
+flask-migrate
+freetype-py
+future
+gitpython
+grpcio-status
+grpcio-tools
+gspread
+gunicorn
+html5lib
+jsonpatch
+jsonpointer
+keyring
+language-selector
+launchpadlib
+lockfile
+louis
+lxml
+mergedeep
+neomodel
+netifaces
+networkx
+nltk
+nose
+olefile
+openai
+openapi-spec-validator
+opentelemetry-exporter-gcp-trace
+opentelemetry-instrumentation-flask
+opentelemetry-instrumentation-requests
+opentelemetry-instrumentation-sqlalchemy
+opentelemetry-propagator-gcp
+pep517
+pexpect
+pillow
+pip-autoremove
+pip-chill
+pipenv
+pipx
+posthog
+prance
+prompt-toolkit
+psutil
+psycopg2-binary
+ptyprocess
+pycairo
+pycodestyle
+pycups
+pyflakes
+pygithub
+pygobject
+pyrsistent
+pyserial
+pysnooper
+pytest-playwright
+python-apt
+python-debian
+python-markdown-maker
+python-xlib
+pyudev
+pyxdg
+rfc3986
+rq
+scikit-learn
+scour
+semver
+sqlalchemy-stubs
+systemd-python
+terminator
+testresources
+toml
+tomli
+typed-ast
+types-pyyaml
+typing-inspect
+ubuntu-drivers-common
+ubuntu-pro-client
+ufw
+unattended-upgrades
+untangle
+usb-creator
+vertexai
+wadllib
+watchdog
+webencodings
+xdg
+xkit
+xmltodict
+yamllint
