--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,116 @@
-alive-progress
-babel
-beautifulsoup4
-brlapi
-cloud-init
-colorama
-command-not-found
+black==24.4.2 # do not touch, same version as superlinter
+click
 compliance-trestle
-configobj
 coverage
-cssselect
-cupshelpers
 dacite
-dbus-python
-defer
-distro-info
-duplicity
-email-validator
-en-core-web-sm
-evdev
-ewmh
-fasteners
-flask-caching
-flask-compress
-flask-cors
-flask-migrate
-freetype-py
-future
+Flask
+Flask_Caching
+flask_compress
+Flask_Cors
+Flask_Migrate
+Flask-SQLAlchemy
+setuptools
 gitpython
-grpcio-status
-grpcio-tools
+google-api-core
+google_auth_oauthlib
+google-cloud-aiplatform
+grpcio_status
+grpcio
 gspread
 gunicorn
-html5lib
-jsonpatch
-jsonpointer
-keyring
-language-selector
-launchpadlib
-lockfile
-louis
-lxml
-mergedeep
-neomodel
-netifaces
 networkx
 nltk
-nose
-olefile
+oauthlib
 openai
+playwright
+psycopg2-binary
+pygithub
+python_markdown_maker
+scikit_learn
+scipy
+semver
+setuptools
+SQLAlchemy
+compliance-trestle
+nose
+mypy
+numpy
+neo4j
+neomodel
+openapi-schema-validator
 openapi-spec-validator
-opentelemetry-exporter-gcp-trace
-opentelemetry-instrumentation-flask
-opentelemetry-instrumentation-requests
-opentelemetry-instrumentation-sqlalchemy
-opentelemetry-propagator-gcp
+openpyxl
+orderedmultidict
+packaging
+paramiko
+pathable
+pathspec
+pbr
 pep517
-pexpect
-pillow
+Pillow
 pip-autoremove
-pip-chill
-pipenv
-pipx
-posthog
+platformdirs
+playwright
+pluggy
 prance
 prompt-toolkit
-psutil
+proto-plus
+protobuf
 psycopg2-binary
-ptyprocess
-pycairo
+pyasn1
+pyasn1-modules
 pycodestyle
-pycups
+pycparser
+pydantic
+pyee
 pyflakes
-pygithub
-pygobject
+PyGithub
+PyJWT
+PyNaCl
+pyparsing
 pyrsistent
-pyserial
-pysnooper
+PySnooper
+pytest
+pytest-base-url
 pytest-playwright
-python-apt
-python-debian
+python-dateutil
+python-dotenv
+python-frontmatter
 python-markdown-maker
-python-xlib
-pyudev
-pyxdg
+python-slugify
+PyYAML==6.0.1
+regex
+requests
+requests-oauthlib
 rfc3986
+rsa
 rq
+redis
+ruamel.yaml
+ruamel.yaml.clib
 scikit-learn
-scour
-semver
+Shapely
+six
+smmap
+sniffio
+soupsieve
+SQLAlchemy
 sqlalchemy-stubs
-systemd-python
-terminator
 testresources
+text-unidecode
+threadpoolctl
 toml
 tomli
+tqdm
 typed-ast
-types-pyyaml
+types-PyYAML
 typing-inspect
-ubuntu-drivers-common
-ubuntu-pro-client
-ufw
-unattended-upgrades
+typing_extensions
 untangle
-usb-creator
+urllib3
 vertexai
-wadllib
-watchdog
-webencodings
-xdg
-xkit
 xmltodict
-yamllint
+google-cloud-trace
+alive-progress
+posthog
+
