--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@types/d3": "^7.4.2",
     "awesome-typescript-loader": "5.2.1",
     "axios": "^0.21.4",
+    "click": "^0.1.0",
     "d3": "^7.8.5",
     "d3-dag": "^0.6.3",
     "date-fns": "^2.16.1",
