--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,26 +9,13 @@
     "allowSyntheticDefaultImports": true,
     "allowJs": true,
     "checkJs": false,
-    "lib": [
-      "esnext",
-      "dom"
-    ],
+    "lib": ["esnext", "dom"],
     "outDir": "dist",
     "moduleResolution": "node",
     "keyofStringsOnly": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "esModuleInterop": true
   },
-  "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "**/*.js",
-    "src/**/*"
-  ],
-  "exclude": [
-    "venv",
-    "dist",
-    "node_modules",
-    "build",
-    "scripts"
-  ]
+  "include": ["**/*.ts", "**/*.tsx", "**/*.js", "src/**/*"],
+  "exclude": ["venv", "dist", "node_modules", "build", "scripts"]
 }
