--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "date-fns": "^2.16.1",
     "dompurify": "^3.0.5",
     "elkjs": "^0.7.1",
+    "idb": "^8.0.3",
     "marked": "^9.0.2",
     "marked-react": "^2.0.0",
     "npm": "^7.11.2",
