--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "date-fns": "^2.16.1",
     "dompurify": "^3.0.5",
     "elkjs": "^0.7.1",
+    "idb": "^8.0.3",
     "lucide-react": "^0.536.0",
     "marked": "^9.0.2",
     "marked-react": "^2.0.0",
