--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@babel/preset-env": "^7.14.0",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.13.0",
+    "@tailwindcss/postcss": "^4.1.17",
     "@testing-library/react": "^11.2.3",
     "@types/jest": "^26.0.23",
+    "@types/minimatch": "^6.0.0",
     "@types/react-router-dom": "^5",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.1",
+    "autoprefixer": "^10.4.22",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.4",
     "del-cli": "^3.0.1",
@@ -40,7 +43,10 @@
     "import-sort-style-module": "^6.0.0",
     "jest": "26.6.3",
     "jest-puppeteer": "^6.0.3",
+    "minimatch": "^10.1.1",
     "modclean": "^3.0.0-beta.1",
+    "postcss": "^8.5.6",
+    "postcss-loader": "^8.2.0",
     "prettier": "^2.2.0",
     "prettier-plugin-import-sort": "^0.0.6",
     "pretty-quick": "^3.1.0",
@@ -65,6 +71,7 @@
     "dompurify": "^3.0.5",
     "elkjs": "^0.7.1",
     "idb": "^8.0.3",
+    "jerrypick": "^1.1.2",
     "lucide-react": "^0.536.0",
     "marked": "^9.0.2",
     "marked-react": "^2.0.0",
@@ -89,6 +96,7 @@
     "semantic-ui-react": "^2.1.3",
     "showdown": "^2.1.0",
     "sinon": "^10.0.0",
+    "tailwindcss": "3",
     "typescript": "4.2.4",
     "web-worker": "^1.2.0"
   },
