fix: Update ENTRYPOINT in Dockerfile and add dev-flask target in Makefile for improved development workflow

--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -17,4 +17,4 @@ RUN apt update &&\
     make install-deps-python &&\
     make install-python
 
-ENTRYPOINT make dev-flask
+ENTRYPOINT make dev-flask-docker
