--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,30 +1,62 @@
-# name: Test-e2e
-# on: [push, pull_request]
-# jobs:
-#   build:
-#     name: Test-e2e
-#     runs-on: ubuntu-latest
-#     timeout-minutes: 10
-#     steps:
-#       - name: Check out code
-#         uses: actions/checkout@v4
-#       - uses: actions/setup-python@v4
-#         with:
-#           python-version: '3.11.4' 
-#           cache: 'pip'
-#       - uses: actions/setup-node@v3
-#         with:
-#           cache: 'yarn'
-#           node-version: 'v20.12.1'
-#       - name: Install dependencies
-#         run: |
-#           sudo apt-get update
-#           sudo apt-get install -y python3-setuptools python3-pip python3-virtualenv chromium-browser libgbm1
-#           make install
-#       - name: DB setup
-#         run: |
-#             make migrate-upgrade
-#             python cre.py --upstream_sync
-#       # - name: Run app and e2e tests
-      #   run: |
-      #       make e2e
+name: Cypress E2E Tests
+
+on:
+ push:
+      branches:
+        - main
+ pull_request:
+      branches:
+        - main
+ jobs:
+   cypress-run:
+     runs-on: ubuntu-latest
+     steps:
+       - name: Checkout code
+         uses: actions/checkout@v4
+         with:
+         python-version: '3.11'
+         cache: 'pip'
+       - name: Setup Node.js
+         uses: actions/setup-node@v4
+         with:
+         node-version: '20'
+         cache: 'yarn'
+       - name: Install dependencies
+         run: |
+           sudo apt-get update
+           sudo apt-get install -y python3-setuptools python3-pip python3-dev
+
+       -name Install python dependencies
+         run: |
+         make install-deps-python 
+       - name: Install Node.js dependencies
+       run:
+       yarn install --frozen-lockfile
+       - name: Setup database
+       run:
+       make migrate-upgrade
+       python cre.py --upstream_sync
+      
+      -name: Build frontend
+      run : 
+      yarn build
+      -name: Start Flask server 
+      run : 
+      export FLASK_APP="${{github.workspace}}/cre.py"
+      export FLASK_CONFIG=development
+      export INSECURE_REQUESTS=1
+      flask run --port=5000 &
+      sleep 5
+
+      -name: Run Cypress tests
+      run :
+      yarn cypress run
+
+      -name:Upload screenshots and videos on failure
+      if: failure()
+      uses: actions/upload-artifact@v4
+      with: 
+      name: Cypress screenshots and videos
+      path: cypress/screenshots, cypress/videos
+      
+       
